# Synesthesia

./: .gitignore  AGENTS.md  LICENSE  README.md  menu.py  pyproject.toml  requirements.txt
.kilo/plans/: 1782637621402-relation-map-tab.md  1782638438445-positional-color-disc.md  flow-relation-color-view.md  flow-relations-shapes.md  keyboard-relation-view.md
src/synestesia/: __init__.py  __main__.py
src/synestesia/composer/: __init__.py  app.py
src/synestesia/composer_live/: __init__.py  app.py
src/synestesia/engine/: __init__.py  core.py
src/synestesia/midi_visualizer/: __init__.py  app.py
src/synestesia/theory_explorator/: __init__.py  app.py
src/synestesia/visualization/: __init__.py  app.py
src/synestesia/visualizer/: __init__.py  app.py
tests/: test_lfi.py
