[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "synestesia"
version = "0.1.0"
description = "Liminal Flow Intonation — MIDI visualization and composition suite"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pygame>=2.1.0",
    "numpy>=1.22.0",
]

[project.optional-dependencies]
midi = ["mido>=1.2.10"]
dev  = ["pytest>=7.0"]

[project.scripts]
synestesia = "synestesia.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
